# quicksilver

./: .gitignore  Cargo.toml  config.toml  db.json  prepare.ps1  rustfmt.toml
src/: config.rs  main.rs  utils.rs
src/commands/: admin_burn.rs  admin_give.rs  coin.rs  counter.rs  goto.rs  inventory.rs  mod.rs  status.rs  test.rs
src/data/: battle.rs  items.rs  mod.rs  places.rs  rng.rs  state.rs  user.rs
src/systems/: autoconfig.rs  mod.rs  xp_leveling.rs
src/systems/autoconfig/: apply_config.rs  data.rs  mod.rs  server_setup.rs
