[package]
name = "quicksilver"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12.2", features = ["client", "gateway", "rustls_backend", "model", "cache"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
poise = "0.6.1"
eyre = "0.6.12"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
rand = "0.8.5"
thiserror = "1.0.61"
image = "0.25.1"
imageproc = "0.25.0"
ab_glyph = "0.2.26"
reqwest = "0.12.5"

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 1
